<resources>
    <string name="app_name">CarWash</string>
    <string name="exterior">Exterior Only (5$)</string>
    <string name="full">Exterior with Interior Vacuum (10$)</string>
    <string name="calculate">Calculate</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">SUBMIT</string>
    <string name="car_wash_packages">Car Wash Packages</string>
    <string name="discount_info">Buy 12+ washes for a 25% discount</string>
    <string name="total_price_text">Total price</string>
    <string name="car_wash_img_content_description">Car Wash</string>
</resources>
