<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuitem_about"
        android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom"
        android:title="@string/about"/>

    <item
        android:id="@+id/menuitem_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"
        android:title="@string/help"/>

    <item
        android:id="@+id/menuitem_settings"
        app:showAsAction="never"
        android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/subitem1"
                android:title="Sub item 1"/>

            <item
                android:id="@+id/subitem2"
                android:title="Sub item 2"/>
        </menu>
    </item>
</menu>